objects/Customer_Release__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Releases</relationshipLabel>
        <relationshipName>Customer_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <label>Release Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Customer Release</label>
    <nameField>
        <label>Customer Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>